--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "pino": "^10.3.1",
         "express": "^5.2.1",
         "swagger-ui": "^5.31.1",
         "swagger-ui-dist": "^5.31.1"
